Improving sponsor logic